fixed dateTime format use Unix seconds was milliseconds

--- a/views/batTable.ejs
+++ b/views/batTable.ejs
@@ -15,7 +15,8 @@
     <tbody>
       <% var current%>
       <% batRecords.forEach(function(batRecord){ %>
-        <% current = moment(batRecord.timeIndex)%>
+        <% current = moment.unix(batRecord.timeIndex) %>
+        <% current.subtract(4, 'hours') %>
         <tr>
           <td><%= current.format("L, LT") %></td>
           <td><%= (batRecord.batV / 1000).toFixed(2) %></td>
