added link buttons and JSON endpoints for plot pages

--- a/views/batTable.ejs
+++ b/views/batTable.ejs
@@ -5,11 +5,11 @@
     <thead>
       <tr>
         <th>DateTime</th>
-        <th>Voltage</th>
-        <th>Current</th>
-        <th>Power</th>
-        <th>Charge %</th>
-        <th>AmpHours</th>
+        <th><a href="/batrecords/batV" class="button">Voltage</a></th>
+        <th><a href="/batrecords/batI" class="button">Current</a></th>
+        <th><a href="/batrecords/batP" class="button">Power</a></th>
+        <th><a href="/batrecords/batC" class="button">Charge %</a></th>
+        <th><a href="/batrecords/batQ" class="button">AmpHours</a></th>
       </tr>
     </thead>
     <tbody>
