--- a/views/batPlot.ejs
+++ b/views/batPlot.ejs
@@ -3,11 +3,16 @@
 
 <script>
 
-var data = []; // format of elements [new Date(2001, 0, 1), 1]
+var data = [
+    // [new Date(2001, 0, 1), 1],
+    // [new Date(2002, 0, 1), 2],
+    // [new Date(2003, 0, 1), 2],
+    // [new Date(2004, 0, 1), 3],
+    // [new Date(2005, 0, 1), 4],
+    // [new Date(2006, 0, 1), 5]
+]; // format of elements [new Date(2001, 0, 1), 1]
 
 var plotParams = { 
-    maxTime: 0,
-    minTime: 0,
     maxDate: 0,
     minDate: 0,
     maxVal: 0,
@@ -17,9 +22,32 @@ var plotParams = {
     
 plotParams.parameter = <%- JSON.stringify(parameter) %> //to pass string data into script from EJS object passed to render
 
-var batVData = d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){ //the URL needs to be passed from the controller along with the parameter
+var batVData = d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){ 
   //code to populate the plotParameter object and the data array goes here
-  console.log(jsonData);
+//   console.log(jsonData);
+
+  var ta = [];
+  var i = 0;
+  jsonData.forEach((record) => {
+    //   console.log(record);
+
+      data.push([new Date(record.timeIndex * 1000), record[plotParams.parameter]/1000 ]);
+
+    //   console.log('data: ' + data[i]);
+
+      ta = data[i];
+    //   console.log('ta: ' + ta);
+      if (ta[1] > plotParams.maxVal){
+          plotParams.maxVal = ta[1];
+      }
+      if (ta[1] < plotParams.minVal){
+          plotParams.minVal = ta[1];
+      }
+      ++i;
+  });
+  plotParams.minDate = data[0][0];
+  plotParams.maxDate = data[data.length - 1][0]
+//   console.log(data);
   console.log(plotParams);
 });
 
@@ -29,11 +57,11 @@ var margin = {top: 20, right: 30, bottom: 30, left: 40},
     height = 500 - margin.top - margin.bottom;
 
 var x = d3.time.scale()
-    .domain([new Date(2001, 0, 1), new Date(2006, 0, 1)]) //use max & minDate
+    .domain([plotParams.minDate, plotParams.maxDate]) //use max & minDate
     .range([0, width]);
 
 var y = d3.scale.linear()
-    .domain([0, 6])  // use maxVal
+    .domain([0, plotParams.maxVal + 1])  // use maxVal
     .range([height, 0]);
 
 var xAxis = d3.svg.axis()
