--- a/views/batPlot.ejs
+++ b/views/batPlot.ejs
@@ -3,6 +3,7 @@
 
 <script>
 
+// global data variable
 var data = [
     // [new Date(2001, 0, 1), 1],
     // [new Date(2002, 0, 1), 2],
@@ -19,12 +20,46 @@ var plotParams = {
     minVal: 0,
     parameter: ""
 };
-    
-plotParams.parameter = <%- JSON.stringify(parameter) %> //to pass string data into script from EJS object passed to render
 
-var batVData = d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){ 
-  //code to populate the plotParameter object and the data array goes here
-//   console.log(jsonData);
+// set the canvas size
+var margin = {top: 20, right: 30, bottom: 30, left: 40},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+    
+// create the data scales
+var x = d3.time.scale()
+    .range([0, width]);
+    
+var y = d3.scale.linear()
+    .range([height, 0]);
+    
+// create the plot axes
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .ticks(d3.time.hours, 3)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .ticks(13)
+    .orient("left");
+    
+
+// append the svg element    
+var svg = d3.select("body").append("svg")
+    .datum(data)
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    
+plotParams.parameter = <%- JSON.stringify(parameter) %> //paramter being plotted for labels
+
+// This code is generalized for any parameter, the URL for the specific parameter is passed in the request
+// JSON data is loaded asynchronously so code that depends on the data needs to be in the callback
+
+d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){ 
 
   var ta = [];
   var i = 0;
@@ -49,60 +84,48 @@ var batVData = d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){
   plotParams.maxDate = data[data.length - 1][0]
 //   console.log(data);
   console.log(plotParams);
+
+
+// define the plot domains
+  x.domain([d3.min(data, function(da){return da[0]}), d3.max(data, function(da){return da[0]})]); //use max & minDate
+    // x.domain([ new Date(2017, 6, 14, 0), new Date(2017, 6, 16, 0)])
+  y.domain([0, d3.max(data, function(da){return da[1]}) + 1]);  //this is an arbitrary value should be a % of the max for generality
+    // y.domain([0, 14])
+
+// create the svg line code
+  
+  var line = d3.svg.line()
+      .interpolate("monotone")
+      .x(function(d) { return x(d[0]); })
+      .y(function(d) { return y(d[1]); });
+  
+// add the axis
+  
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+  
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis);
+
+// plot the line  
+  svg.append("path")
+      .attr("class", "line")
+      .attr("d", line);
+
+// plot the data points
+  svg.selectAll(".dot")
+      .data(function() { return data; })    //was .data(data)
+    .enter().append("circle")
+      .attr("class", "dot")
+      .attr("cx", line.x())
+      .attr("cy", line.y())
+      // .attr("cx", function(d){ return d[0]; })
+      // .attr("cy", function(d){ return d[1]; })
+      .attr("r", 1.5);
+      
 });
-
-
-var margin = {top: 20, right: 30, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-var x = d3.time.scale()
-    .domain([plotParams.minDate, plotParams.maxDate]) //use max & minDate
-    .range([0, width]);
-
-var y = d3.scale.linear()
-    .domain([0, plotParams.maxVal + 1])  // use maxVal
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left");
-
-var line = d3.svg.line()
-    .interpolate("monotone")
-    .x(function(d) { return x(d[0]); })
-    .y(function(d) { return y(d[1]); });
-
-var svg = d3.select("body").append("svg")
-    .datum(data)
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-svg.append("g")
-    .attr("class", "x axis")
-    .attr("transform", "translate(0," + height + ")")
-    .call(xAxis);
-
-svg.append("g")
-    .attr("class", "y axis")
-    .call(yAxis);
-
-svg.append("path")
-    .attr("class", "line")
-    .attr("d", line);
-
-svg.selectAll(".dot")
-    .data(data)
-  .enter().append("circle")
-    .attr("class", "dot")
-    .attr("cx", line.x())
-    .attr("cy", line.y())
-    .attr("r", 3.5);
 
 </script>
