--- a/views/batPlot.ejs
+++ b/views/batPlot.ejs
@@ -18,7 +18,8 @@ var plotParams = {
     minDate: 0,
     maxVal: 0,
     minVal: 0,
-    parameter: ""
+    parameter: "",
+    title: ""
 };
 
 // set the canvas size
@@ -54,7 +55,8 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
     
-plotParams.parameter = <%- JSON.stringify(parameter) %> //paramter being plotted for labels
+plotParams.parameter = <%- JSON.stringify(parameter) %>     //paramter being plotted for labels
+plotParams.title = <%- JSON.stringify(title) %>             //graph title
 
 // This code is generalized for any parameter, the URL for the specific parameter is passed in the request
 // JSON data is loaded asynchronously so code that depends on the data needs to be in the callback
@@ -89,7 +91,7 @@ d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){
 // define the plot domains
   x.domain([d3.min(data, function(da){return da[0]}), d3.max(data, function(da){return da[0]})]); //use max & minDate
     // x.domain([ new Date(2017, 6, 14, 0), new Date(2017, 6, 16, 0)])
-  y.domain([0, d3.max(data, function(da){return da[1]}) + 1]);  //this is an arbitrary value should be a % of the max for generality
+  y.domain([d3.min(data, function(da){return da[1]}) * .9 , d3.max(data, function(da){return da[1]}) * 1.1]);  //10% white space above plot line can use min * .9 to fit to window
     // y.domain([0, 14])
 
 // create the svg line code
@@ -125,6 +127,15 @@ d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){
       // .attr("cx", function(d){ return d[0]; })
       // .attr("cy", function(d){ return d[1]; })
       .attr("r", 1.5);
+
+// Add the chart title      
+  svg.append('text')
+    .attr('transform', 'translate(' + width / 2 + ' , ' + margin.top + ')')
+    .attr('text-anchor', 'middle')
+    .attr('font-family', 'sans-serif')
+    .attr('font-size', '20px')
+    .attr('font-weight', 'bold')
+    .text(plotParams.title);
       
 });
 
