--- a/views/batPlot.ejs
+++ b/views/batPlot.ejs
@@ -90,9 +90,14 @@ d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){
 
 // define the plot domains
   x.domain([d3.min(data, function(da){return da[0]}), d3.max(data, function(da){return da[0]})]); //use max & minDate
-    // x.domain([ new Date(2017, 6, 14, 0), new Date(2017, 6, 16, 0)])
-  y.domain([d3.min(data, function(da){return da[1]}) * .9 , d3.max(data, function(da){return da[1]}) * 1.1]);  //10% white space above plot line can use min * .9 to fit to window
-    // y.domain([0, 14])
+
+  
+  var yMin = d3.min(data, function(da){return da[1]});
+  var yMax = d3.max(data, function(da){return da[1]});
+  var yPad = (yMax - yMin) * 0.15;
+  
+  y.domain([(yMin - yPad) , (yMax + yPad)]);  //10% white space above & below plot line
+
 
 // create the svg line code
   
