--- a/views/batPlot.ejs
+++ b/views/batPlot.ejs
@@ -153,6 +153,8 @@ d3.json(<%- JSON.stringify(plotUrl) %>, function(jsonData){
     .attr('font-size', '20px')
     .attr('font-weight', 'bold')
     .text(plotParams.title);
+    
+  console.log(data);
       
 });
 
